--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -338,6 +338,9 @@ button.btn-yellow{
           line-height: 1.63;
           color: #2c3135;
         }
+        a{
+          color:#337ab7;
+        }
       }
     }
   }
