--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -57,9 +57,9 @@
   }
 
   .top-banner-txt{
-    padding: 82px 0 24px;
+    // padding: 82px 0 24px;
+    padding: 40px 0 24px;
     @media (max-width: 480px){
-      padding: 40px 0 24px;
     }
     @media (max-width: 414px){
       padding:5px 0 0;
@@ -70,7 +70,8 @@
       font-size: 50px;
       font-weight: 900;
       line-height: 1.04;
-      margin: 0 0 12px;
+      // margin: 0 0 12px;
+      margin: 0 0 25px;
       @media (max-width: 480px){
         font-size: 40px;
       }
