--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -69,7 +69,7 @@
       color:white;
       font-size: 40px;
       font-weight: 900;
-      line-height: 1.04;
+      line-height: 1.3;
       // margin: 0 0 12px;
       margin: 0 0 25px;
       @media (max-width: 480px){
@@ -96,16 +96,19 @@
       line-height: 1.36;
       margin-bottom: 0;
       color:white;
+      padding-bottom: 32px;
       @media (max-width: 480px){
         font-size: 20px;
       }
       @media (max-width: 414px){
+        padding-bottom: 20px;
         font-size: 18px;
       }
     }
     &.rus-lang{
       h2{
         font-size: 30px;
+        line-height: 1.04;
         @media (max-width: 480px){
           font-size: 26px;
         }
@@ -115,9 +118,9 @@
       }
     }
     ul.top-list{
-      padding-top: 32px;
+      // padding-top: 32px;
       @media (max-width: 414px){
-        padding-top: 20px;
+        // padding-top: 20px;
         padding-bottom: 30px;
       }
       li{
@@ -248,23 +251,23 @@
             background-image: none;
             box-shadow: none;
             .slider-selection{
-              background: rgba(32,214,255,1);
-              background: -moz-linear-gradient(left, rgba(32,214,255,1) 0%, rgba(80,182,255,1) 100%);
-              background: -webkit-gradient(left top, right top, color-stop(0%, rgba(32,214,255,1)), color-stop(100%, rgba(80,182,255,1)));
-              background: -webkit-linear-gradient(left, rgba(32,214,255,1) 0%, rgba(80,182,255,1) 100%);
-              background: -o-linear-gradient(left, rgba(32,214,255,1) 0%, rgba(80,182,255,1) 100%);
-              background: -ms-linear-gradient(left, rgba(32,214,255,1) 0%, rgba(80,182,255,1) 100%);
-              background: linear-gradient(to right, rgba(32,214,255,1) 0%, rgba(80,182,255,1) 100%);
-              filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#20d6ff', endColorstr='#50b6ff', GradientType=1 );
+              background: #36b9ff;
+              background: -moz-linear-gradient(-45deg, #36b9ff 0%, #0081c6 100%);
+              background: -webkit-gradient(left top, right bottom, color-stop(0%, #36b9ff), color-stop(100%, #0081c6));
+              background: -webkit-linear-gradient(-45deg, #36b9ff 0%, #0081c6 100%);
+              background: -o-linear-gradient(-45deg, #36b9ff 0%, #0081c6 100%);
+              background: -ms-linear-gradient(-45deg, #36b9ff 0%, #0081c6 100%);
+              background: linear-gradient(135deg, #36b9ff 0%, #0081c6 100%);
+              filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#36b9ff', endColorstr='#0081c6', GradientType=1 );
             }
           }
           .slider-handle{
             background: transparent;
-            background-color: #20d5ff;
+            background-color: #36baff;
             &.min-slider-handle{
               width: 24px;
               height: 24px;
-              background-color: #20d5ff;
+              background-color: #36baff;
               box-shadow: 0px 8px 12px 0 rgba(80, 183, 255, 0.45);
             }
           }
@@ -290,6 +293,18 @@
       }
     }
   }
+
+  &.emotional-bg{
+    background: url('../images/top-banner-emotional.jpg') top center no-repeat;
+    background-size: cover;
+    .top-banner-txt{
+      p{
+        @media (max-width: 480px){
+          margin-bottom: 30px;
+        }
+      }
+    }
+  }
 }
 
 button.btn-yellow{
@@ -300,9 +315,9 @@ button.btn-yellow{
   text-transform: uppercase;
   width: 100%;
   height: 51px;
-  border-radius: 3px;
-  background-color: #ffc720;
-  box-shadow: 0px 10px 24px 6px rgba(255, 199, 32, 0.35);
+  border-radius: 4px;
+  background-color: #faa61a;
+  box-shadow: 0px 10px 24px 6px rgba(250, 166, 26, 0.35);
 }
 
 .info-layer{
@@ -499,6 +514,83 @@ button.btn-yellow{
     text-align: center;
     button.btn-yellow{
       width: 30%;
+      box-shadow: 0px 10px 24px 6px rgba(0, 0, 0, 0.16);
+      @media (max-width: 768px){
+        width: 50%;
+      }
+      @media (max-width: 414px){
+        width: 100%;
+      }
+    }
+  }
+}
+
+.credit-layer{
+  padding: 260px 0 120px;
+  position: relative;
+  background: #faa81a;
+  background: -moz-linear-gradient(top, #faa81a 0%, #ef403d 100%);
+  background: -webkit-gradient(left top, left bottom, color-stop(0%, #faa81a), color-stop(100%, #ef403d));
+  background: -webkit-linear-gradient(top, #faa81a 0%, #ef403d 100%);
+  background: -o-linear-gradient(top, #faa81a 0%, #ef403d 100%);
+  background: -ms-linear-gradient(top, #faa81a 0%, #ef403d 100%);
+  background: linear-gradient(to bottom, #faa81a 0%, #ef403d 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#faa81a', endColorstr='#ef403d', GradientType=0 );
+  @media (max-width: 768px){
+    // padding: 80px 0;
+  }
+  .triangle-left{
+    box-sizing: content-box;
+    width: 50%;
+    height: 0;
+    padding-left: 50%;
+    padding-top: 16%;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    z-index: 300;
+    >div{
+      width: 0;
+      height: 0;
+      margin-left: -1000px;
+      margin-top: -305px;
+      // border-left: 0px solid transparent;
+      border-right: 2000px solid transparent;
+      border-top: 260px solid #fff;
+    }
+  }
+  img.phone-card{
+    max-width: 100%;
+  }
+  h2{
+    font-size: 40px;
+    font-weight: bold;
+    text-align: center;
+    color: #ffffff;
+    text-transform: uppercase;
+    margin: 0 0 100px;
+    @media (max-width: 768px){
+      font-size: 30px;
+    }
+  }
+  .info-block{
+    margin-bottom: 75px;
+    @media (max-width: 414px){
+      margin-bottom: 55px;
+    }
+    .img-wrap{
+      min-height: 80px;
+    }
+    h4, p{
+      color:white;
+    }
+  }
+  .add-cash-button-wrap{
+    padding-top: 40px;
+    text-align: center;
+    button.btn-yellow{
+      width: 30%;
+      box-shadow: 0px 10px 24px 6px rgba(0, 0, 0, 0.16);
       @media (max-width: 768px){
         width: 50%;
       }
@@ -790,13 +882,13 @@ footer{
       width: 270px;
       text-align: center;
       border-radius: 5px;
-      background: rgba(23,150,214,1);
-      background: -moz-linear-gradient(-65deg, rgba(23,150,214,1) 0%, rgba(0,129,198,1) 100%);
-      background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(23,150,214,1)), color-stop(100%, rgba(0,129,198,1)));
-      background: -webkit-linear-gradient(-65deg, rgba(23,150,214,1) 0%, rgba(0,129,198,1) 100%);
-      background: -o-linear-gradient(-65deg, rgba(23,150,214,1) 0%, rgba(0,129,198,1) 100%);
-      background: -ms-linear-gradient(-65deg, rgba(23,150,214,1) 0%, rgba(0,129,198,1) 100%);
-      background: linear-gradient(165deg, rgba(23,150,214,1) 0%, rgba(0,129,198,1) 100%);
+      background: #1796d6;
+      background: -moz-linear-gradient(-65deg, #1796d6 0%, #0081c6 100%);
+      background: -webkit-gradient(left top, right bottom, color-stop(0%, #1796d6), color-stop(100%, #0081c6));
+      background: -webkit-linear-gradient(-65deg, #1796d6 0%, #0081c6 100%);
+      background: -o-linear-gradient(-65deg, #1796d6 0%, #0081c6 100%);
+      background: -ms-linear-gradient(-65deg, #1796d6 0%, #0081c6 100%);
+      background: linear-gradient(165deg, #1796d6 0%, #0081c6 100%);
       filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1796d6', endColorstr='#0081c6', GradientType=1 );
       box-shadow: 0px 30px 40px 0 rgba(0, 0, 0, 0.2);
       color:white;
