--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -67,9 +67,9 @@
     h2{
       text-transform: uppercase;
       color:white;
-      font-size: 40px;
+      font-size: 50px;
       font-weight: 900;
-      line-height: 1.3;
+      line-height: 1.04;
       // margin: 0 0 12px;
       margin: 0 0 25px;
       @media (max-width: 480px){
@@ -164,6 +164,14 @@
         @media (min-width: 651px){
           display: table-cell;
           vertical-align: top;
+        }
+      }
+      &.rus-lang{
+        .panel-cell{
+          width: 185px;
+          @media (max-width: 650px){
+            width: 100%;
+          }
         }
       }
     }
@@ -459,7 +467,7 @@ button.btn-yellow{
           font-size: 14px;
         }
         a{
-          color: #0a5271;
+          color: #0082c6;
           text-decoration: underline;
         }
       }
@@ -541,22 +549,15 @@ button.btn-yellow{
   }
   .triangle-left{
     box-sizing: content-box;
-    width: 50%;
-    height: 0;
-    padding-left: 50%;
-    padding-top: 16%;
-    overflow: hidden;
     position: absolute;
     top: 0;
+    left: 0;
+    right: 0;
     z-index: 300;
-    >div{
-      width: 0;
-      height: 0;
-      margin-left: -1000px;
-      margin-top: -305px;
-      // border-left: 0px solid transparent;
-      border-right: 2000px solid transparent;
-      border-top: 260px solid #fff;
+    border-right: 100vw solid transparent;
+    border-top: 260px solid #fff;
+    @media (max-width: 480px){
+      display: none;
     }
   }
   img.phone-card{
@@ -573,6 +574,13 @@ button.btn-yellow{
       font-size: 30px;
     }
   }
+  h5.info-bottom-text{
+    font-size: 30px;
+    font-weight: 300;
+    line-height: 0.87;
+    text-align: center;
+    color: #ffffff;
+  }
   .info-block{
     margin-bottom: 75px;
     @media (max-width: 414px){
@@ -583,6 +591,9 @@ button.btn-yellow{
     }
     h4, p{
       color:white;
+    }
+    p{
+      font-size: 18px;
     }
   }
   .add-cash-button-wrap{
@@ -676,7 +687,7 @@ button.btn-yellow{
           font-size: 16px;
           font-weight: 300;
           line-height: 1.63;
-          color: #2c3135;
+          color: #0a5271;
         }
         a{
           color:#337ab7;
@@ -693,26 +704,17 @@ button.btn-yellow{
     }
     .triangle-down{
       box-sizing: content-box;
-      width: 50%;
-      height: 0;
-      padding-left:50%;
-      padding-top: 16%;
-      overflow: hidden;
       position: absolute;
-      top: -3px;
+      top: 0;
+      left: 0;
+      right: 0;
       z-index: 300;
+      border-left: 50vw solid transparent;
+      border-right: 50vw solid transparent;
+      border-top: 300px solid #ffc720;
       @media (max-width: 480px){
         display: none;
       }
-    }
-    .triangle-down div {
-      width: 0;
-      height: 0;
-      margin-left:-1000px;
-      margin-top:-305px;
-      border-left: 1000px solid transparent;
-      border-right: 1000px solid transparent;
-      border-top: 300px solid #ffc720;
     }
   }
 
