--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -116,7 +116,7 @@
     }
     &.rus-lang{
       h2{
-        font-size: 40px;
+        font-size: 30px;
         line-height: 1.3;
         font-weight: bold;
         @media (max-width: 480px){
@@ -125,6 +125,7 @@
       }
       p{
         // font-size: 18px;
+        font-size: 20px;
       }
     }
     ul.top-list{
@@ -478,7 +479,7 @@ button.btn-yellow{
         }
         a{
           color: #0082c6;
-          text-decoration: underline;
+          // text-decoration: underline;
         }
       }
     }
