--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -31,7 +31,7 @@
   }
 
   header{
-    padding: 20px 0;
+    padding: 13px 0 20px;
     h1.logo-wrap{
       margin: 0;
       a.logo{
@@ -58,7 +58,7 @@
 
   .top-banner-txt{
     // padding: 82px 0 24px;
-    padding: 30px 0 24px;
+    padding: 32px 0 24px;
     @media (max-width: 480px){
     }
     @media (max-width: 414px){
@@ -68,10 +68,11 @@
       text-transform: uppercase;
       color:white;
       font-size: 50px;
-      font-weight: 900;
+      // font-weight: 900;
+      font-weight: bold;
       line-height: 1.04;
       // margin: 0 0 12px;
-      margin: 0 0 25px;
+      margin: 0 0 28px;
       @media (max-width: 480px){
         font-size: 40px;
       }
@@ -100,7 +101,7 @@
       line-height: 1.36;
       margin-bottom: 0;
       color:white;
-      padding-bottom: 32px;
+      padding-bottom: 27px;
       @media (max-width: 480px){
         font-size: 20px;
       }
@@ -137,7 +138,6 @@
       }
     }
     ul.top-list{
-      // padding-top: 32px;
       @media (max-width: 414px){
         // padding-top: 20px;
         padding-bottom: 30px;
@@ -179,7 +179,7 @@
       border-radius: 0;
     }
     .panel-main-wrap{
-      padding: 30px;
+      padding: 28px 30px;
       @media (min-width: 651px){
         width: 100%;
         display: table;
@@ -226,7 +226,7 @@
         font-weight: bold;
         line-height: 1.35;
         color: #faa61a;
-        margin-bottom: 20px;
+        margin-bottom: 21px;
         display: block;
       }
       span{
@@ -245,6 +245,7 @@
         font-size: 14px;
         font-weight: 300;
         color: #0a5271;
+        margin-bottom: 8px;
         span{
           font-size: 16px;
           font-weight: bold;
@@ -254,7 +255,7 @@
       }
       .range-wrap{
         &:not(:last-child){
-          padding-bottom: 25px;
+          padding-bottom: 28px;
         }
         span.count{
           font-size: 14px;
@@ -356,7 +357,7 @@ button.btn-yellow{
 }
 
 .info-layer{
-  padding: 120px 0 115px;
+  padding: 120px 0 100px;
   @media (max-width: 768px){
     padding: 80px 0 25px;
   }
@@ -367,6 +368,7 @@ button.btn-yellow{
     margin-bottom: 55px;
   }
   .img-wrap{
+    margin-bottom: 17px;
     img{
       width: 64px;
     }
@@ -374,7 +376,7 @@ button.btn-yellow{
   h4{
     font-size: 20px;
     color: #0a5271;
-    line-height: 2.63;
+    line-height: 44px;
   }
   p{
     font-size: 16px;
@@ -564,13 +566,13 @@ button.btn-yellow{
   padding: 260px 0 120px;
   position: relative;
   background: #faa81a;
-  background: -moz-linear-gradient(top, #faa61a 0%, #ef413d 100%);
-  background: -webkit-gradient(left top, left bottom, color-stop(0%, #faa81a), color-stop(100%, #ef413d));
-  background: -webkit-linear-gradient(top, #faa61a 0%, #ef413d 100%);
-  background: -o-linear-gradient(top, #faa61a 0%, #ef413d 100%);
-  background: -ms-linear-gradient(top, #faa61a 0%, #ef413d 100%);
-  background: linear-gradient(to bottom, #faa61a 0%, #ef413d 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#faa61a', endColorstr='#ef413d', GradientType=0 );
+  background: -moz-linear-gradient(285deg, #faa61a 1%, #ef413d 100%); /* ff3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #faa61a), color-stop(100%, #ef413d)); /* safari4+,chrome */
+  background: -webkit-linear-gradient(285deg, #faa61a 1%, #ef413d 100%); /* safari5.1+,chrome10+ */
+  background: -o-linear-gradient(285deg, #faa61a 1%, #ef413d 100%); /* opera 11.10+ */
+  background: -ms-linear-gradient(285deg, #faa61a 1%, #ef413d 100%); /* ie10+ */
+  background: linear-gradient(165deg, #faa61a 1%, #ef413d 100%); /* w3c */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#faa61a', endColorstr='#ef413d',GradientType=0 ); /* ie6-9 */
   @media (min-width: 501px){
     margin-top: -80px;
     // padding: 80px 0;
@@ -704,8 +706,8 @@ button.btn-yellow{
 }
 
 .question-layer{
-  background: #faa61a url('../images/pattern.png') center 50px no-repeat;
-  padding: 113px 0 0;
+  background: #faa61a url('../images/pattern.png') center 30px no-repeat;
+  padding: 116px 0 0;
   @media (max-width: 480px){
     padding-top: 95px;
   }
@@ -719,7 +721,7 @@ button.btn-yellow{
     text-transform: uppercase;
     text-align: center;
     margin-top: 0;
-    margin-bottom: 80px;
+    margin-bottom: 70px;
     @media (max-width: 480px){
       font-size: 34px;
       margin-bottom: 70px;
@@ -731,7 +733,7 @@ button.btn-yellow{
   }
 
   ul.question-list{
-    padding-bottom: 100px;
+    padding-bottom: 105px;
     margin-bottom: 0;
     @media (max-width: 414px){
       padding-bottom: 70px;
@@ -742,6 +744,7 @@ button.btn-yellow{
       min-height: 42px;
       box-shadow: 0px 15px 30px 0 rgba(20, 46, 138, 0.06);
       overflow: hidden;
+      margin-bottom: 15px;
       @media (max-width: 414px){
         margin-bottom: 10px;
       }
@@ -769,7 +772,7 @@ button.btn-yellow{
       }
       .text-cell{
         background: #fff;
-        padding: 8px 15px;
+        padding: 9px 10px 7px 19px;
         border-radius: 0 21px 21px 0;
         @media (max-width: 414px){
           border-radius: 0;
@@ -796,13 +799,24 @@ button.btn-yellow{
     .triangle-down{
       box-sizing: content-box;
       position: absolute;
-      top: 0;
+      width: 100%;
+      height: 73px;
       left: 0;
       right: 0;
-      z-index: 300;
-      border-left: 49vw solid transparent;
-      border-right: 50vw solid transparent;
-      border-top: 300px solid #faa61a;
+      top: 0;
+      background: #faa61a;
+      &:before{
+        position: absolute;
+        content: '';
+        display: block;
+        top: 73px;
+        left: 0;
+        right: 0;
+        z-index: 300;
+        border-left: 49vw solid transparent;
+        border-right: 50vw solid transparent;
+        border-top: 239px solid #faa61a;
+      }
       @media (max-width: 480px){
         display: none;
       }
@@ -822,7 +836,7 @@ button.btn-yellow{
   }
 
   .list-block{
-    padding: 95px 98px 120px;
+    padding: 94px 98px 120px;
     box-shadow: 0px 30px 40px 0 rgba(0, 0, 0, 0.2);
     border-radius: 14px;
     background: #e96945;
@@ -847,8 +861,9 @@ button.btn-yellow{
       color:white;
       text-align: center;
       margin-top: 0;
-      margin-bottom: 39px;
+      margin-bottom: 43px;
       text-transform: uppercase;
+      padding: 0 2%;
       @media (max-width: 414px){
         font-size: 26px;
         line-height: 1.31;
@@ -929,7 +944,8 @@ footer{
       font-weight: 300;
       line-height: 1.63;
       color: #0a5271;
-      margin-bottom: 59px;
+      margin-bottom: 46px;
+      padding: 0 2%;
       @media (max-width: 414px){
         font-size: 13px;
         line-height: 1.54;
@@ -938,6 +954,7 @@ footer{
       &.copyright{
         font-size: 14px;
         line-height: 1.86;
+        margin-bottom: 53px;
         @media (max-width: 414px){
           margin-bottom: 18px;
           font-size: 13px;
@@ -949,7 +966,7 @@ footer{
       font-size: 20px;
       line-height: 1.3;
       color: #0a5271;
-      margin-bottom: 36px;
+      margin-bottom: 34px;
       display: inline-block;
       @media (max-width: 414px){
         margin-bottom: 16px;
@@ -976,18 +993,18 @@ footer{
       text-align: center;
       border-radius: 5px;
       background: #1796d6;
-      background: -moz-linear-gradient(-65deg, #1796d6 0%, #0081c6 100%);
-      background: -webkit-gradient(left top, right bottom, color-stop(0%, #1796d6), color-stop(100%, #0081c6));
-      background: -webkit-linear-gradient(-65deg, #1796d6 0%, #0081c6 100%);
-      background: -o-linear-gradient(-65deg, #1796d6 0%, #0081c6 100%);
-      background: -ms-linear-gradient(-65deg, #1796d6 0%, #0081c6 100%);
-      background: linear-gradient(165deg, #1796d6 0%, #0081c6 100%);
-      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1796d6', endColorstr='#0081c6', GradientType=1 );
+      background: -moz-linear-gradient(285deg, #1795d6 1%, #0082c6 100%); /* ff3.6+ */
+      background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #1795d6), color-stop(100%, #0082c6)); /* safari4+,chrome */
+      background: -webkit-linear-gradient(285deg, #1795d6 1%, #0082c6 100%); /* safari5.1+,chrome10+ */
+      background: -o-linear-gradient(285deg, #1795d6 1%, #0082c6 100%); /* opera 11.10+ */
+      background: -ms-linear-gradient(285deg, #1795d6 1%, #0082c6 100%); /* ie10+ */
+      background: linear-gradient(165deg, #1795d6 1%, #0082c6 100%); /* w3c */
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1795d6', endColorstr='#0082c6',GradientType=0 ); /* ie6-9 */
       box-shadow: 0px 30px 40px 0 rgba(0, 0, 0, 0.2);
       color:white;
       font-size: 14px;
       padding: 13px 10px 14px;
-      margin-bottom: 60px;
+      margin-bottom: 58px;
       &:focus{
         outline:0;
       }
@@ -1006,7 +1023,7 @@ footer{
       }
     }
     a.store-link{
-      margin-bottom: 59px;
+      margin-bottom: 52px;
       display: inline-block;
       @media (max-width: 414px){
         margin: 20px 0;
