--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -48,6 +48,8 @@
     a.flag-link{
       display: inline-block;
       line-height: 39px;
+      position: relative;
+      top: 2px;
       img{
         border-radius:50%;
         width: 25px;
@@ -166,6 +168,23 @@
         li{
           font-size: 20px;
         }
+      }
+    }
+
+    &.rational-pg{
+      padding: 75px 0 25px;
+      h2{
+        &.fs-40{
+          font-size: 40px;
+          line-height: 40px;
+          margin-bottom: 19px;
+        }
+      }
+      h4{
+        margin-bottom: 48px;
+      }
+      p{
+        line-height: 30px;
       }
     }
   }
@@ -387,13 +406,13 @@ button.btn-yellow{
 }
 
 .quote-layer{
-  padding: 80px 0;
+  padding: 74px 0;
   @media (max-width: 768px){
     padding: 50px 0 25px;
   }
   .quote-block{
     position: relative;
-    padding-left: 50px;
+    padding-left: 48px;
     background: url('../images/qoute.png') 15px 5px no-repeat;
     @media (max-width: 768px){
       margin-bottom: 35px;
@@ -406,32 +425,33 @@ button.btn-yellow{
     margin-bottom: 0;
     &.quote-wrap{
       font-style: italic;
-      line-height: 1.63;
-      min-height: 90px;
+      line-height: 27px;
+      min-height: 92px;
       @media (max-width: 768px){
         min-height: 0;
         margin-bottom: 20px;
       }
     }
     &.name{
-      line-height: 1.5;
+      line-height: 1.3;
       font-weight: normal;
     }
     &.info{
       font-size: 14px;
-      line-height: 1.43;
+      line-height: 1.5;
     }
   }
 }
 
 .rational-info-layer{
   background: #0082c6;
-  padding: 50px 0;
+  padding: 50px 0 42px;
   @media (max-width: 768px){
     padding-bottom: 20px;
   }
   .rat-info-block{
     text-align: center;
+    padding-top: 9px;
     @media (max-width: 768px){
       margin-bottom: 30px;
     }
@@ -440,10 +460,11 @@ button.btn-yellow{
     }
     &>*{
       display: inline-block;
-      vertical-align: middle;
+      vertical-align: top;
     }
     .icon-wrap{
-      padding-right: 35px;
+      padding-right: 29px;
+      padding-top: 2px;
       @media (max-width: 768px){
         width: 100%;
         padding-right: 0;
@@ -452,6 +473,7 @@ button.btn-yellow{
     }
     .rat-txt{
       text-align: left;
+      margin-right: -15px;
       @media (max-width: 768px){
         text-align: center;
       }
@@ -466,13 +488,14 @@ button.btn-yellow{
         text-transform: none;
         font-size: 30px;
         line-height: 0.87;
+        margin-bottom: 8px;
       }
     }
   }
 }
 
 .rat-info-table{
-  padding: 45px 0;
+  padding: 62px 0 39px;
   table.table{
     tr{
       &:first-child{
@@ -486,7 +509,7 @@ button.btn-yellow{
         line-height: 1.25;
         text-align: left;
         color: #0a5271;
-        padding: 16px 0 16px 98px;
+        padding: 15px 0 16px 98px;
         vertical-align: middle;
         @media (max-width: 991px){
           padding: 16px;
@@ -506,7 +529,7 @@ button.btn-yellow{
 
 .add-cash-layer{
   background: #0082c6;
-  padding: 120px 0;
+  padding: 116px 0;
   @media (max-width: 768px){
     padding: 80px 0;
   }
@@ -516,7 +539,7 @@ button.btn-yellow{
     text-align: center;
     color: #ffffff;
     text-transform: uppercase;
-    margin: 0 0 100px;
+    margin: 0 0 90px;
     @media (max-width: 768px){
       font-size: 30px;
     }
@@ -528,9 +551,19 @@ button.btn-yellow{
     }
     .img-wrap{
       min-height: 80px;
+      margin-bottom: 0;
+      img{
+        width: auto;
+      }
     }
-    h4, p{
+    h4{
       color:white;
+      margin-bottom: 18px;
+    }
+    p{
+      color:white;
+      line-height: 26px;
+      padding: 0 9%;
     }
   }
   .check-layer{
