--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -509,8 +509,9 @@ button.btn-yellow{
         line-height: 1.25;
         text-align: left;
         color: #0a5271;
-        padding: 15px 0 16px 98px;
+        padding: 15px 0 16px 99px;
         vertical-align: middle;
+        width: 50%;
         @media (max-width: 991px){
           padding: 16px;
         }
@@ -522,6 +523,16 @@ button.btn-yellow{
           color: #0082c6;
           // text-decoration: underline;
         }
+        &:last-child{
+          padding: 15px 0 16px 114px;
+          @media (max-width: 991px){
+            padding: 16px;
+          }
+          @media (max-width: 414px){
+            padding: 10px;
+            font-size: 14px;
+          }
+        }
       }
     }
   }
@@ -529,7 +540,7 @@ button.btn-yellow{
 
 .add-cash-layer{
   background: #0082c6;
-  padding: 116px 0;
+  padding: 116px 0 120px;
   @media (max-width: 768px){
     padding: 80px 0;
   }
@@ -545,9 +556,9 @@ button.btn-yellow{
     }
   }
   .info-block{
-    margin-bottom: 75px;
+    margin-bottom: 62px;
     @media (max-width: 414px){
-      margin-bottom: 55px;
+      margin-bottom: 30px;
     }
     .img-wrap{
       min-height: 80px;
@@ -559,6 +570,7 @@ button.btn-yellow{
     h4{
       color:white;
       margin-bottom: 18px;
+      line-height: 26px;
     }
     p{
       color:white;
@@ -573,7 +585,7 @@ button.btn-yellow{
     margin-bottom: 20px;
     p{
       font-size: 16px;
-      line-height: 1.63;
+      line-height: 26px;
       text-align: left;
       color: #ffffff;
       margin-bottom: 0;
@@ -1067,7 +1079,7 @@ footer{
     }
   }
   &.rational-foot{
-    padding: 120px 0 84px;
+    padding: 114px 0 84px;
     @media (max-width: 480px){
       padding: 80px 0;
     }
@@ -1077,11 +1089,12 @@ footer{
         line-height: 1.3;
         color: #0a5271;
         margin-bottom: 35px;
+        font-weight: 500;
         &.copyright{
           font-size: 14px;
           font-weight: 300;
           line-height: 1.86;
-          margin-bottom: 57px;
+          margin-bottom: 51px;
         }
       }
     }
