--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -187,6 +187,23 @@
         line-height: 30px;
       }
     }
+    &.emotional-pg{
+      padding: 20px 0 25px;
+      h2{
+        &.fs-40{
+          font-size: 40px;
+          line-height: 40px;
+          margin-bottom: 21px;
+        }
+      }
+      p{
+        padding-bottom: 30px;
+        &.question{
+          font-size: 22px;
+          padding-bottom: 5px;
+        }
+      }
+    }
   }
 
   .panel{
